303/ingress-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devapp303
spec:
  rules:
    - host: devops303.mehdi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: serv-app
                port:
                  number: 80
